# -gst.reconciliation

./: .env.example  .gitignore  README.md  RIC 2APURCHASES FOR FEB'26.xls  RIC GSTR-2B FOR FEB'26.xlsx  RIC PURCHASES 2A mini .xls  RIC PURCHASES FOR FEB'26.xls  ai_explanation_service.py  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: .env.example  package.json  pyproject.toml  requirements.txt  tsconfig.json
apps/backend/app/: main.py
apps/backend/app/auth/: dependencies.py
apps/backend/app/config/: settings.py
apps/backend/app/db/: connection.py
apps/backend/app/models/: __init__.py  gst_rule.py  gstr2a.py  gstr2b.py  invoice.py  pdf_job.py  reconciliation.py  user.py
apps/backend/app/parsers/: gstr2a_parser.py  gstr2b_parser.py
apps/backend/app/pdf_backends/: base.py  chromium.py  factory.py  reportlab.py  weasy.py
apps/backend/app/routes/: auth.py  chat.py  dashboard.py  explain.py  pdf.py  process.py  reports.py  returns.py  rules.py  upload.py
apps/backend/app/schemas/: api.py  explain.py  invoice.py  pdf.py  rules.py
apps/backend/app/services/: ai_explanation_service.py  auth_service.py  itc_rules_service.py  matching_service.py  pdf_job_service.py  pdf_service.py  process_service.py  (+5 more)
apps/backend/scripts/: seed_rules.py  test_db.py
apps/backend/src/: index.ts
apps/backend/tests/: test_date_helpers.py  test_gstr2a_parser.py  test_gstr2b_parser.py  test_health.py  test_matching_service.py  test_nexus_profiles_reconciliation.py  test_pdf_routes.py  test_pdf_service.py  test_report_service.py  test_standardize.py
(+72 files in other folders)
