[project]
name = "gst-reconciliation-backend"
version = "0.1.0"
description = "GST Reconciliation Backend - FastAPI + Beanie"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "beanie>=1.25.0",
    "motor>=3.3.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "rapidfuzz>=3.6.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "openai>=1.12.0",
    "httpx>=0.27.0",
    "langchain==0.2.16",
    "langchain-openai==0.1.25",
    "langchain-community==0.2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
